--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    window.mosaicConfigure = {
+      componentPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest',
+      themePath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest',
+      vendorPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest/vendor'
+    }
+  </script>
+  <script src="https://cdn.svc.oneadvanced.com/mosaic-components/latest/components-loader.js" async></script>
 </head>
 <body>
-  <app-root></app-root>
+  <dashboard-ui-root></dashboard-ui-root>
 </body>
 </html>
