US_PSW-8648 CLONE - Mosaic Dashboard - UI
add navbar

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
     window.mosaicConfigure = {
       componentPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest',
       themePath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest',
-      vendorPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest/vendor'
+      vendorPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest/vendor',
+      useLayout: true,
+      usePageLoader: true,
+      useControls: true,
+      useForms: true
     }
   </script>
   <script src="https://cdn.svc.oneadvanced.com/mosaic-components/latest/components-loader.js" async></script>
