US_PSW-8648 CLONE - Mosaic Dashboard - UI
add manage orders

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
       useLayout: true,
       usePageLoader: true,
       useControls: true,
-      useForms: true
+      useForms: true,
+      useData: true
     }
   </script>
   <script src="https://cdn.svc.oneadvanced.com/mosaic-components/latest/components-loader.js" async></script>
